remvoded overflow issue from other styles

--- a/0-styles.css
+++ b/0-styles.css
@@ -16,6 +16,11 @@
   --mobile-width: 480px;
 }
 
+body {
+  margin: 0;
+  overflow-x: hidden;
+}
+
 /* Content Selector */
 .content {
   max-width: var(--content-mxw);
@@ -159,6 +164,7 @@ main {
 /* Middle Screen */
 
 @media (max-width: 1048px) {
+
   /* Content Selector */
   .content {
     display: flex;
@@ -190,6 +196,7 @@ main {
     flex-direction: column;
     justify-items: flex-start;
   }
+
   .nav-links {
     display: none;
   }
@@ -206,6 +213,7 @@ main {
     width: 357px;
     height: 436px;
   }
+
   .hero-content h1 {
     display: flex;
     flex-direction: column;
@@ -277,7 +285,7 @@ main {
     display: none;
   }
 
-  #menu-checkbox:checked ~ .nav-links {
+  #menu-checkbox:checked~.nav-links {
     display: flex;
     flex-direction: column;
     margin-top: 10px;
@@ -329,4 +337,3 @@ main {
   flex-wrap: wrap;
   border: 1px solid blue;
 }
-
