--- a/3-styles.css
+++ b/3-styles.css
@@ -21,6 +21,11 @@
   --mobile-width: 480px;
 }
 
+body {
+  margin: 0;
+  overflow-x: hidden;
+}
+
 /* Content Selector */
 .content {
   max-width: var(--content-mxw);
@@ -164,6 +169,7 @@ main {
 /* Middle Screen */
 
 @media (max-width: 1048px) {
+
   /* Content Selector */
   .content {
     display: flex;
@@ -195,6 +201,7 @@ main {
     flex-direction: column;
     justify-items: flex-start;
   }
+
   .nav-links {
     display: none;
   }
@@ -211,6 +218,7 @@ main {
     width: 357px;
     height: 436px;
   }
+
   .hero-content h1 {
     display: flex;
     flex-direction: column;
@@ -282,7 +290,7 @@ main {
     display: none;
   }
 
-  #menu-checkbox:checked ~ .nav-links {
+  #menu-checkbox:checked~.nav-links {
     display: flex;
     flex-direction: column;
     margin-top: 10px;
@@ -397,7 +405,7 @@ main {
     height: 1631px;
   }
 
-  .part-one { 
+  .part-one {
     margin-top: 103px;
     width: 325px;
     height: 288px;
